--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,21 +1,21 @@
 @font-face {
     font-family: 'Cardinal';
-    src: url('/fonts/Cardinal-regular.woff2') format("woff2"),
-    url('/fonts/Cardinal-regular.woff2') format('woff2');
+    src: url('https://fashion-night.vercel.app/fonts/Cardinal-regular.woff2') format("woff2"),
+    url('https://fashion-night.vercel.app/fonts/Cardinal-regular.woff2') format('woff2');
     font-weight: normal;
 }
 
 @font-face {
     font-family: 'Cardinal';
-    src: url('/fonts/Cardinal-medium.woff2') format("woff2"),
-    url('/fonts/Cardinal-medium.woff2') format('woff2');
+    src: url('https://fashion-night.vercel.app/fonts/Cardinal-medium.woff2') format("woff2"),
+    url('https://fashion-night.vercel.app/fonts/Cardinal-medium.woff2') format('woff2');
     font-weight: 600;
 }
 
 @font-face {
     font-family: "NeueHaasUnica";
-    src: url("/fonts/NeueHaasUnica1.woff2") format("woff2"),
-    url("/fonts/NeueHaasUnica1.woff2") format("woff2");
+    src: url("https://fashion-night.vercel.app/fonts/NeueHaasUnica1.woff2") format("woff2"),
+    url("https://fashion-night.vercel.app/fonts/NeueHaasUnica1.woff2") format("woff2");
     font-weight: 300;
     font-style: normal;
     font-display: swap
@@ -23,8 +23,8 @@
 
 @font-face {
     font-family: "NeueHaasUnica";
-    src: url("/fonts/NeueHaasUnica2.woff2") format("woff2"),
-    url("/fonts/NeueHaasUnica2.woff2") format("woff2");
+    src: url("https://fashion-night.vercel.app/fonts/NeueHaasUnica2.woff2") format("woff2"),
+    url("https://fashion-night.vercel.app/fonts/NeueHaasUnica2.woff2") format("woff2");
     font-weight: normal;
     font-style: normal;
     font-display: swap
@@ -32,8 +32,8 @@
 
 @font-face {
     font-family: "NeueHaasUnica";
-    src: url("/fonts/NeueHaasUnica3.woff2") format("woff2"),
-    url("/fonts/NeueHaasUnica3.woff2") format("woff2");
+    src: url("https://fashion-night.vercel.app/fonts/NeueHaasUnica3.woff2") format("woff2"),
+    url("https://fashion-night.vercel.app/fonts/NeueHaasUnica3.woff2") format("woff2");
     font-weight: 500;
     font-style: normal;
     font-display: swap
@@ -41,8 +41,8 @@
 
 @font-face {
     font-family: "NeueHaasUnica";
-    src: url("/fonts/NeueHaasUnica4.woff2") format("woff2"),
-    url("/fonts/NeueHaasUnica4.woff2") format("woff2");
+    src: url("https://fashion-night.vercel.app/fonts/NeueHaasUnica4.woff2") format("woff2"),
+    url("https://fashion-night.vercel.app/fonts/NeueHaasUnica4.woff2") format("woff2");
     font-weight: 600;
     font-style: normal;
     font-display: swap
